Bug 1369488 - Force update popups anchored to hidden deck box, r=tnikkel@gmail.com

MozReview-Commit-ID: Ixj5zdtyUOc

--HG--
extra : rebase_source : 6c35e63ffd6b057b99dd826dff41d91694dd6b60